# voyelles-pendues-ui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  engine.cpp  engine.h  enigneinterface.cpp  enigneinterface.h  main.cpp  qml.qrc  voyelles-pendues_fr_FR.ts
datas/: valid_words.txt
qml/: GamePage.qml  ScoreList.qml  ScorePage.qml  main.qml
scripts/: preprocess_dictionnary.py  valid_word.txt  valid_word_without_consonants.txt  valid_word_without_vowels.txt
src/: engine.cpp  engineinterface.cpp  engineinterface.h  enigneinterface.cpp  enigneinterface.h  main.cpp  models.h  scoreinterface.cpp  scoreinterface.h
